# g5

./: CMakeLists.txt  b.sh
src/: Action.h  BTree.cpp  BTree.h  BackIndex.cpp  BackIndex.h  BackIndexRock.cpp  BackIndexRock.h  Baket.cpp  Baket.h  NER.cpp  NER.h  QueActions.h  Request.h  Searcher.cpp  Searcher.h  UUID.h  main.cpp
